--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-NEON_USER=coco_test_owner
-NEON_PASSWORD=npg_4gb6ZriRqCzJ
-NEON_SERVER=ep-floral-art-a10lcuzw-pooler.ap-southeast-1.aws.neon.tech
-NEON_PORT=5432
-NEON_DB=coco_test
-NEON_TEST_DB=coco_test
+POSTGRES_USER=coco_test_owner
+POSTGRES_PASSWORD=npg_4gb6ZriRqCzJ
+POSTGRES_SERVER=ep-floral-art-a10lcuzw-pooler.ap-southeast-1.aws.POSTGRES.tech
+POSTGRES_PORT=5432
+POSTGRES_DB=coco_test
+POSTGRES_TEST_DB=coco_test
+
+SECRET_KEY=hwuhwhx28ye*Y^T@2e82ye   
