--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,27 @@
-[project]
-name = "coconut-circle"
-version = "0.1.0"
-description = ""
-authors = [
-    {name = "Dileep",email = "work.dileepchandra@gmail.com"}
-]
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "fastapi (>=0.115.11,<0.116.0)",
-    "sqlalchemy (>=2.0.39,<3.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "uvicorn (>=0.34.0,<0.35.0)",
-    "python-dotenv (>=1.0.1,<2.0.0)",
-    "alembic (>=1.15.1,<2.0.0)",
-    "databases[postgresql] (>=0.9.0,<0.10.0)",
-    "asyncpg (>=0.30.0,<0.31.0)",
-    "pydantic (>=2.10.6,<3.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
-]
-
 [tool.poetry]
-packages = [{include = "app", from = "src"}]
+name = "coconut-backend"
+version = "0.1.0"
+description = "Coconut Backend"
+authors = ["Your Name <you@example.com>"]
+readme = "README.md"
 
+[tool.poetry.dependencies]
+python = "^3.10"
+fastapi = "^0.115.11"
+alembic = "^1.15.1"
+sqlmodel = "^0.0.24"
+psycopg2-binary = "^2.9.10"
+psycopg = {extras = ["binary"], version = "^3.2.6"}
+pydantic-settings = "^2.8.1"
+pytest = "^8.3.5"
+coverage = "^7.6.12"
+uvicorn = {extras = ["standard"], version = "^0.34.0"}
+asyncpg = "^0.30.0"
+sqlalchemy = "^2.0.39"
+psycopg2 = "^2.9.10"
+python-dotenv = "^1.0.1"
 
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.15.0"
-sqlalchemy-stubs = "^0.4"
-flake8 = "^7.1.2"
-autoflake = "^2.3.1"
-isort = "^6.0.1"
-black = "^25.1.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
