fix:Alembic Migrations

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ POSTGRES_SERVER=ep-floral-art-a10lcuzw-pooler.ap-southeast-1.aws.POSTGRES.tech
 POSTGRES_PORT=5432
 POSTGRES_DB=coco_test
 POSTGRES_TEST_DB=coco_test
+POSTGRES_URI="postgresql://coco_test_owner:npg_4gb6ZriRqCzJ@ep-floral-art-a10lcuzw-pooler.ap-southeast-1.aws.neon.tech/coco_test?sslmode=require"
 
 SECRET_KEY=hwuhwhx28ye*Y^T@2e82ye   
