--- a/app/alembic.ini
+++ b/app/alembic.ini
@@ -1,14 +1,12 @@
 # A generic, single database configuration.
 
 [alembic]
-# path to migration scripts
+# path to migration scripts.
 # Use forward slashes (/) also on windows to provide an os agnostic path
 script_location = alembic
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
-# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
-# for all available tokens
 # file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
@@ -63,7 +61,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://coco_test_owner:npg_4gb6ZriRqCzJ@ep-floral-art-a10lcuzw-pooler.ap-southeast-1.aws.neon.tech/coco_test?sslmode=require
+sqlalchemy.url = postgresql+psycopg://coconut_owner:npg_e28qMuRGxovb@ep-wandering-hall-a1xt2yx1-pooler.ap-southeast-1.aws.neon.tech/coconut?sslmode=require
 
 
 [post_write_hooks]
