--- a/requirements.txt
+++ b/requirements.txt
@@ -58,12 +58,12 @@ poetry==1.8.3
 poetry-core==1.9.0
 poetry-plugin-export==1.8.0
 psycopg==3.2.1
-psycopg2-binary==2.9.9
+psycopg-binary==3.2.1
 ptyprocess==0.7.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
-pydantic==2.8.2
+pydantic==2.8.2c
 pydantic-settings==2.4.0
 pydantic_core==2.20.1
 Pygments==2.18.0
